--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -2,7 +2,6 @@
 <title>To-Do</title>
 <body>
     <h1>Motherfucker</h1>
-    <h2>Motherfucker</h2>
-    <h3>Motherfucker</h3>
+    <input id="id_list_table"></input>
 </body>
 </html>
