Front page HTML now generated from a template

--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -2,6 +2,7 @@
 <title>To-Do</title>
 <body>
     <h1>Motherfucker</h1>
-    <input id="id_list_table"></input>
+    <input id="id_new_item" placeholder="Enter a to-do item" />
+    <table id="id_list_table" />
 </body>
 </html>
