--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -3,9 +3,13 @@
 <body>
     <h1>Motherfucker</h1>
     <form method="POST">
-        <input id="id_new_item" placeholder="Enter a to-do item"/>
+        <input name="item_text" id="id_new_item" placeholder="Enter a to-do item"/>
         {% csrf_token %}
     </form>
-    <table id="id_list_table" />
+    <table id="id_list_table">
+        <tr><td>1: {{ new_item_text }}</td></tr>
+
+    </table>
+
 </body>
 </html>
